--- a/style.css
+++ b/style.css
@@ -1,10 +1,23 @@
+.navbar {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 999;
+}
+
 .navbar-color-gradient {
-  background: linear-gradient(180deg, #e9e9e9 0%, #ada9ba 99.99%);
+  background: rgba(112, 111, 142); /* Gunakan RGBA untuk transparansi background */
+  /* Tambahkan shadow jika ingin menonjolkan navbar lebih jelas */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Opsional: untuk sedikit bayangan */
 }
 
 .jumbotron {
-  padding-top: 3rem;
-  background: linear-gradient(180deg, #ada9ba 0%, #706f8e 100%);
+  height: 100vh; /* Full viewport height */
+  display: flex;
+  align-items: center; /* Vertically center content */
+  justify-content: center; /* Horizontally center content */
+  background: linear-gradient(180deg, rgb(112, 111, 142) 0%, #706f8e 100%);
+  overflow: hidden;
 }
 
 .jumbotron .row {
@@ -28,11 +41,28 @@
 
 .abtme-color {
   background: linear-gradient(180deg, #706f8e 0%, #393a5a 100%);
+  padding: 5rem 0; /* Tambah ruang di atas dan bawah */
+  min-height: 70vh; /* Minimum height lebih besar */
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  .abtme-color {
+    padding: 3rem 0; /* Sesuaikan padding untuk layar kecil */
+    min-height: 50vh; /* Tinggi minimum untuk layar kecil */
+  }
 }
 
 .project-color {
   background: linear-gradient(180deg, #393a5a 0%, #22222e 100%);
+  padding-top: 3rem;
 }
+
+#project-tittle {
+  padding-bottom: 3rem;
+}
+
 /* Atur ukuran gambar project agar lebih seragam */
 .project-img {
   width: 200px;
