--- a/style.css
+++ b/style.css
@@ -35,10 +35,10 @@
 
 .jumbotron {
   margin-top: -60px;
-  padding-top: 100px; /* Adjust this based on your navbar height */
-  min-height: 100vh; /* Full viewport height */
-  align-items: center; /* Vertically center content */
-  justify-content: center; /* Horizontally center content */
+  padding-top: 100px;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
   background: linear-gradient(180deg, #706f8e 0%, #706f8e 100%);
   overflow: hidden;
 }
@@ -65,15 +65,15 @@
 
 .abtme-color {
   background: linear-gradient(180deg, #706f8e 0%, #393a5a 100%);
-  min-height: 70vh; /* Minimum height lebih besar */
+  min-height: 70vh;
   justify-content: center;
   align-items: center;
 }
 
 @media (max-width: 768px) {
   .abtme-color {
-    padding: 3rem 0; /* Sesuaikan padding untuk layar kecil */
-    min-height: 50vh; /* Tinggi minimum untuk layar kecil */
+    padding: 3rem 0;
+    min-height: 50vh;
   }
 }
 
@@ -86,19 +86,12 @@
   padding-bottom: 3rem;
 }
 
-/* Atur ukuran gambar project agar lebih seragam */
 .project-img {
   width: 200px;
   height: auto;
-  margin-bottom: 10px; /* Tambahkan sedikit margin bawah agar rapi */
+  margin-bottom: 10px;
 }
 
-/* Kurangi jarak antar tombol */
-.bkm .bktm {
-  margin-bottom: 2.6rem;
-}
-
-/* Atur jarak antar kolom project */
 .project-color .col {
   margin-bottom: 20px;
 }
@@ -110,21 +103,18 @@
   background: linear-gradient(180deg, #393a5a 0%, #706f8e 100%);
 }
 
-/* Atur gaya footer */
 .footer-color {
-  background-color: #2c2c2c; /* Sesuaikan warna footer */
+  background-color: #2c2c2c;
   padding: 10px 0;
 }
 
-/* Atur gaya ikon media sosial */
 .social-icons a {
-  margin: 0 10px; /* Jarak antar ikon */
-  color: #fff; /* Warna ikon */
-  font-size: 24px; /* Ukuran ikon */
-  transition: color 0.3s ease; /* Efek hover */
-  text-decoration: none; /* Menghilangkan garis bawah */
+  margin: 0 10px;
+  font-size: 24px;
+  transition: color 0.3s ease;
+  text-decoration: none;
 }
 
 .social-icons a:hover {
-  color: #d3d3d3; /* Warna saat hover */
+  color: #d3d3d3;
 }
