--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+html.lenis,
+html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
+}
+
 .body {
   background: #706f8e;
 }
@@ -113,6 +134,7 @@
   font-size: 24px;
   transition: color 0.3s ease;
   text-decoration: none;
+  color: #fff;
 }
 
 .social-icons a:hover {
