--- a/src/App.css
+++ b/src/App.css
@@ -58,7 +58,7 @@ html {
 }
 
 .jumbotron {
-  padding-top: 100px;
+  padding-top: 8rem;
   min-height: 100vh;
   align-items: center;
   justify-content: center;
